# traingame

./: .gitignore  CMakeLists.txt  README.txt  base.wings  coal_truck.mtl  coal_truck.wings  config.h.cmake  house.wings  make-source-tgz.sh  model_notes.txt  models.gnuplot  pclass.mtl  pclass.wings  train.mtl  train.wings  traingame-map.sh  traingame.desktop
buildings/coal_mine/: coal_mine.mtl  coal_mine.wings  coal_mine.xml
buildings/house2/: house2.mtl  house2.wings  house2.xml
buildings/lighthouse/: lighthouse.mtl  lighthouse.wings
buildings/platform_end/: platform_end.mtl  platform_end.wings  platform_end.xml
buildings/platform_middle/: platform_middle.mtl  platform_middle.wings  platform_middle.xml
buildings/power_plant/: power_plant.mtl  power_plant.wings  power_plant.xml
buildings/white_house/: house.mtl  house.wings  white_house.xml
cmake/Modules/: FindCEGUI.cmake  FindFreetype.cmake  FindGLEW.cmake  FindXerces.cmake
data/gui/fonts/: Legal.txt
data/gui/imagesets/: Trains.imageset
data/gui/looknfeel/: Trains.looknfeel
data/gui/schemes/: Trains.scheme
engines/pclass/: pclass.mtl  pclass.wings  pclass.xml
engines/red/: red.xml  train.wings
engines/saddle/: saddle.mtl  saddle.wings  saddle.xml
engines/tank/: tank.wings  tank.xml
include/: BezierCurve.hpp  BuildingPanel.hpp  ClipVolume.hpp  Colour.hpp  Editor.hpp  GameScreens.hpp  IBillboard.hpp  IBuilding.hpp  IBuildingPicker.hpp  ICargo.hpp  IConfig.hpp  IController.hpp  IFog.hpp  IGraphics.hpp  IIndustry.hpp  ILight.hpp  ILogger.hpp  IMap.hpp  IMesh.hpp  IMessageArea.hpp  IModel.hpp  IPickBuffer.hpp  IQuadTree.hpp  IRenderStats.hpp  IRenderable.hpp  IResource.hpp  IRollingStock.hpp  IScenery.hpp  ISceneryPicker.hpp  IScreen.hpp  ISkyBox.hpp  ISmokeTrail.hpp  IStation.hpp  ITexture.hpp  ITextureManager.hpp  ITrackGraph.hpp  ITrackSegment.hpp  ITrain.hpp  IWindow.hpp  IXMLParser.hpp  (+16 more)
include/gui/: Button.hpp  Canvas3D.hpp  Colour.hpp  ContainerWidget.hpp  FromBottom.hpp  IContainer.hpp  IControl.hpp  IFont.hpp  IImage.hpp  ILayout.hpp  ImageButton.hpp  Internal.hpp  Label.hpp  RenderContext.hpp  Theme.hpp  ThrottleMeter.hpp  ToggleBar.hpp  ToggleButton.hpp  Widget.hpp  Window.hpp
include/gui2/: Button.hpp  Colour.hpp  ContainerWidget.hpp  ILayout.hpp  Label.hpp  RenderBuffer.hpp  RenderContext.hpp  Theme.hpp  ThrottleMeter.hpp  Widget.hpp  Window.hpp
layouts/: demo.xml  editor.xml  game.xml
maps/: coal_mine.xml  figure8.xml  points.xml
maps/coal_mine/: coal_mine.xml
maps/demo/: demo.xml
maps/figure8/: figure8.xml
maps/gen_track/: gen_track.xml
maps/goods_demo/: goods_demo.xml
maps/long_map/: long_map.xml
maps/points/: points.xml
maps/power_plant/: power_plant.xml
maps/sbends/: sbends.xml
maps/uphill/: uphill.xml
maps/villages/: villages.xml
schemas/: building.xsd  config.xsd  engine.xsd  layout.xsd  map.xsd  tree.xsd  waggon.xsd
src/: Billboard.cpp  Building.cpp  BuildingPanel.cpp  BuildingPicker.cpp  ClipVolume.cpp  Config.cpp  CrossoverTrack.cpp  CurvedTrack.cpp  DisplayListContext.cpp  Editor.cpp  Engine.cpp  FLTKWindow.cpp  Fog.cpp  Frustum.cpp  Game.cpp  GenTrack.cpp  Industry.cpp  IterateTrack.cpp  LTree.cpp  LTreeDemo.cpp  Light.cpp  Logger.cpp  Main.cpp  Map.cpp  Maths.cpp  Mesh.cpp  MessageArea.cpp  Model.cpp  ModelTree.cpp  ModelViewer.cpp  NewMapDialog.cpp  NoiseTexture.cpp  OpenGLHelper.cpp  Paths.cpp  Points.cpp  QuadTree.cpp  RenderStats.cpp  Resource.cpp  Resources.cpp  SBend.cpp  (+17 more)
src/ft/: Font.cpp  IFont.hpp
src/gui/: Button.cpp  Canvas3D.cpp  ContainerWidget.cpp  FlowBox.cpp  Font.cpp  FromBottom.cpp  FuelMeter.cpp  Image.cpp  ImageButton.cpp  Label.cpp  Layout.cpp  Panel.cpp  RenderContext.cpp  Theme.cpp  ThrottleMeter.cpp  ToggleBar.cpp  ToggleButton.cpp  Widget.cpp  Window.cpp
src/gui2/: Button.cpp  ContainerWidget.cpp  Label.cpp  Layout.cpp  RenderContext.cpp  Theme.cpp  ThrottleMeter.cpp  Widget.cpp  Window.cpp
tools/: MathsTest.cpp  profile.sh
trees/apple/: apple.mtl  apple.wings  apple.xml
trees/pine/: pine.mtl  pine.wings  pine.xml
waggons/: waggon_base.wings
waggons/coal_truck/: coal_truck.xml
